Prepare to upload netplan-0.1.0-1~0+sp1 to our internal repo.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-netplan (0.1.0-1~0+sp1) UNRELEASED; urgency=low
+netplan (0.1.0-1~0+sp1) unstable; urgency=low
 
   * Initial release.
 
- -- Peter Pentchev <pp@storpool.com>  Tue, 31 Jul 2018 11:32:01 +0300
+ -- Peter Pentchev <pp@storpool.com>  Tue, 31 Jul 2018 15:20:24 +0300
