--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-netplan (0.2.0-1~0+sp2) UNRELEASED; urgency=medium
+netplan (0.3.0-1~0+sp1) UNRELEASED; urgency=medium
 
   * Rename the Debian packaging branch to debian/master in
     accordance with DEP 14.
@@ -16,6 +16,7 @@ netplan (0.2.0-1~0+sp2) UNRELEASED; urgency=medium
   * Add the year 2019 to StorPool's debian/* copyright notice.
   * Add the typos patch to correct a typographical error.
   * Add a simple adequate autopkgtest.
+  * New upstream release.
 
  -- Peter Pentchev <pp@storpool.com>  Thu, 31 Jan 2019 14:25:34 +0200
 
