--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 netplan (0.3.0-1~0+sp1ubuntu1~18.04.1) bionic; urgency=medium
 
   * Rebuild for Ubuntu 18.04 (Bionic Beaver).
+  * Switch back to debian/compat.
 
- -- Peter Pentchev <pp@storpool.com>  Thu, 31 Jan 2019 15:07:52 +0200
+ -- Peter Pentchev <pp@storpool.com>  Thu, 31 Jan 2019 15:12:43 +0200
 
 netplan (0.3.0-1~0+sp1ubuntu1~18.10.1) cosmic; urgency=medium
 
